src/Calculator/DBruijnCalc/DeBruijnGrammar/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from DBruijnCalc/DeBruijnGrammar/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pTerm -> Term                               (1)
	%start_pListTerm -> ListTerm                       (2)
	%start_pScopedTerm -> ScopedTerm                   (3)
	%start_pVarIdent -> VarIdent                       (4)
	Ident -> L_Ident                                   (5)
	Integer -> L_integ                                 (6)
	Program -> ListTerm                                (7)
	Term -> VarIdent                                   (8)
	Term -> '(' Term Term ')'                          (9)
	Term -> 'fn' '=>' ScopedTerm                       (10)
	Term -> 'let' '=' Term 'in' ScopedTerm             (11)
	Term -> '(' Term ')'                               (12)
	ListTerm ->                                        (13)
	ListTerm -> Term                                   (14)
	ListTerm -> Term ';' ListTerm                      (15)
	ScopedTerm -> Term                                 (16)
	VarIdent -> Ident                                  (17)
	VarIdent -> 'Bound' '(' Integer ')'                (18)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	';'            { PT _ (TS _ 3) }
	'='            { PT _ (TS _ 4) }
	'=>'           { PT _ (TS _ 5) }
	'Bound'        { PT _ (TS _ 6) }
	'fn'           { PT _ (TS _ 7) }
	'in'           { PT _ (TS _ 8) }
	'let'          { PT _ (TS _ 9) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pTerm    rule  1
	%start_pListTerm rule  2
	%start_pScopedTerm rule  3
	%start_pVarIdent rule  4
	Ident           rule  5
	Integer         rule  6
	Program         rule  7
	Term            rules 8, 9, 10, 11, 12
	ListTerm        rules 13, 14, 15
	ScopedTerm      rule  16
	VarIdent        rules 17, 18

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'('            shift, and enter state 13
	'Bound'        shift, and enter state 9
	'fn'           shift, and enter state 14
	'let'          shift, and enter state 15
	L_Ident        shift, and enter state 6
	%eof           reduce using rule 13

	Ident          goto state 7
	Program        goto state 19
	Term           goto state 16
	ListTerm       goto state 20
	VarIdent       goto state 12

State 1

	%start_pTerm -> . Term                              (rule 1)

	'('            shift, and enter state 13
	'Bound'        shift, and enter state 9
	'fn'           shift, and enter state 14
	'let'          shift, and enter state 15
	L_Ident        shift, and enter state 6

	Ident          goto state 7
	Term           goto state 18
	VarIdent       goto state 12

State 2

	%start_pListTerm -> . ListTerm                      (rule 2)

	'('            shift, and enter state 13
	'Bound'        shift, and enter state 9
	'fn'           shift, and enter state 14
	'let'          shift, and enter state 15
	L_Ident        shift, and enter state 6
	%eof           reduce using rule 13

	Ident          goto state 7
	Term           goto state 16
	ListTerm       goto state 17
	VarIdent       goto state 12

State 3

	%start_pScopedTerm -> . ScopedTerm                  (rule 3)

	'('            shift, and enter state 13
	'Bound'        shift, and enter state 9
	'fn'           shift, and enter state 14
	'let'          shift, and enter state 15
	L_Ident        shift, and enter state 6

	Ident          goto state 7
	Term           goto state 10
	ScopedTerm     goto state 11
	VarIdent       goto state 12

State 4

	%start_pVarIdent -> . VarIdent                      (rule 4)

	'Bound'        shift, and enter state 9
	L_Ident        shift, and enter state 6

	Ident          goto state 7
	VarIdent       goto state 8

State 5

	Ident -> . L_Ident                                  (rule 5)

	L_Ident        shift, and enter state 6


State 6

	Ident -> L_Ident .                                  (rule 5)

	'('            reduce using rule 5
	')'            reduce using rule 5
	';'            reduce using rule 5
	'Bound'        reduce using rule 5
	'fn'           reduce using rule 5
	'in'           reduce using rule 5
	'let'          reduce using rule 5
	L_Ident        reduce using rule 5
	%eof           reduce using rule 5


State 7

	VarIdent -> Ident .                                 (rule 17)

	'('            reduce using rule 17
	')'            reduce using rule 17
	';'            reduce using rule 17
	'Bound'        reduce using rule 17
	'fn'           reduce using rule 17
	'in'           reduce using rule 17
	'let'          reduce using rule 17
	L_Ident        reduce using rule 17
	%eof           reduce using rule 17


State 8

	%start_pVarIdent -> VarIdent .                      (rule 4)

	%eof           accept


State 9

	VarIdent -> 'Bound' . '(' Integer ')'               (rule 18)

	'('            shift, and enter state 25


State 10

	ScopedTerm -> Term .                                (rule 16)

	'('            reduce using rule 16
	')'            reduce using rule 16
	';'            reduce using rule 16
	'Bound'        reduce using rule 16
	'fn'           reduce using rule 16
	'in'           reduce using rule 16
	'let'          reduce using rule 16
	L_Ident        reduce using rule 16
	%eof           reduce using rule 16


State 11

	%start_pScopedTerm -> ScopedTerm .                  (rule 3)

	%eof           accept


State 12

	Term -> VarIdent .                                  (rule 8)

	'('            reduce using rule 8
	')'            reduce using rule 8
	';'            reduce using rule 8
	'Bound'        reduce using rule 8
	'fn'           reduce using rule 8
	'in'           reduce using rule 8
	'let'          reduce using rule 8
	L_Ident        reduce using rule 8
	%eof           reduce using rule 8


State 13

	Term -> '(' . Term Term ')'                         (rule 9)
	Term -> '(' . Term ')'                              (rule 12)

	'('            shift, and enter state 13
	'Bound'        shift, and enter state 9
	'fn'           shift, and enter state 14
	'let'          shift, and enter state 15
	L_Ident        shift, and enter state 6

	Ident          goto state 7
	Term           goto state 24
	VarIdent       goto state 12

State 14

	Term -> 'fn' . '=>' ScopedTerm                      (rule 10)

	'=>'           shift, and enter state 23


State 15

	Term -> 'let' . '=' Term 'in' ScopedTerm            (rule 11)

	'='            shift, and enter state 22


State 16

	ListTerm -> Term .                                  (rule 14)
	ListTerm -> Term . ';' ListTerm                     (rule 15)

	';'            shift, and enter state 21
	%eof           reduce using rule 14


State 17

	%start_pListTerm -> ListTerm .                      (rule 2)

	%eof           accept


State 18

	%start_pTerm -> Term .                              (rule 1)

	%eof           accept


State 19

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 20

	Program -> ListTerm .                               (rule 7)

	%eof           reduce using rule 7


State 21

	ListTerm -> Term ';' . ListTerm                     (rule 15)

	'('            shift, and enter state 13
	'Bound'        shift, and enter state 9
	'fn'           shift, and enter state 14
	'let'          shift, and enter state 15
	L_Ident        shift, and enter state 6
	%eof           reduce using rule 13

	Ident          goto state 7
	Term           goto state 16
	ListTerm       goto state 32
	VarIdent       goto state 12

State 22

	Term -> 'let' '=' . Term 'in' ScopedTerm            (rule 11)

	'('            shift, and enter state 13
	'Bound'        shift, and enter state 9
	'fn'           shift, and enter state 14
	'let'          shift, and enter state 15
	L_Ident        shift, and enter state 6

	Ident          goto state 7
	Term           goto state 31
	VarIdent       goto state 12

State 23

	Term -> 'fn' '=>' . ScopedTerm                      (rule 10)

	'('            shift, and enter state 13
	'Bound'        shift, and enter state 9
	'fn'           shift, and enter state 14
	'let'          shift, and enter state 15
	L_Ident        shift, and enter state 6

	Ident          goto state 7
	Term           goto state 10
	ScopedTerm     goto state 30
	VarIdent       goto state 12

State 24

	Term -> '(' Term . Term ')'                         (rule 9)
	Term -> '(' Term . ')'                              (rule 12)

	'('            shift, and enter state 13
	')'            shift, and enter state 29
	'Bound'        shift, and enter state 9
	'fn'           shift, and enter state 14
	'let'          shift, and enter state 15
	L_Ident        shift, and enter state 6

	Ident          goto state 7
	Term           goto state 28
	VarIdent       goto state 12

State 25

	VarIdent -> 'Bound' '(' . Integer ')'               (rule 18)

	L_integ        shift, and enter state 27

	Integer        goto state 26

State 26

	VarIdent -> 'Bound' '(' Integer . ')'               (rule 18)

	')'            shift, and enter state 35


State 27

	Integer -> L_integ .                                (rule 6)

	')'            reduce using rule 6


State 28

	Term -> '(' Term Term . ')'                         (rule 9)

	')'            shift, and enter state 34


State 29

	Term -> '(' Term ')' .                              (rule 12)

	'('            reduce using rule 12
	')'            reduce using rule 12
	';'            reduce using rule 12
	'Bound'        reduce using rule 12
	'fn'           reduce using rule 12
	'in'           reduce using rule 12
	'let'          reduce using rule 12
	L_Ident        reduce using rule 12
	%eof           reduce using rule 12


State 30

	Term -> 'fn' '=>' ScopedTerm .                      (rule 10)

	'('            reduce using rule 10
	')'            reduce using rule 10
	';'            reduce using rule 10
	'Bound'        reduce using rule 10
	'fn'           reduce using rule 10
	'in'           reduce using rule 10
	'let'          reduce using rule 10
	L_Ident        reduce using rule 10
	%eof           reduce using rule 10


State 31

	Term -> 'let' '=' Term . 'in' ScopedTerm            (rule 11)

	'in'           shift, and enter state 33


State 32

	ListTerm -> Term ';' ListTerm .                     (rule 15)

	%eof           reduce using rule 15


State 33

	Term -> 'let' '=' Term 'in' . ScopedTerm            (rule 11)

	'('            shift, and enter state 13
	'Bound'        shift, and enter state 9
	'fn'           shift, and enter state 14
	'let'          shift, and enter state 15
	L_Ident        shift, and enter state 6

	Ident          goto state 7
	Term           goto state 10
	ScopedTerm     goto state 36
	VarIdent       goto state 12

State 34

	Term -> '(' Term Term ')' .                         (rule 9)

	'('            reduce using rule 9
	')'            reduce using rule 9
	';'            reduce using rule 9
	'Bound'        reduce using rule 9
	'fn'           reduce using rule 9
	'in'           reduce using rule 9
	'let'          reduce using rule 9
	L_Ident        reduce using rule 9
	%eof           reduce using rule 9


State 35

	VarIdent -> 'Bound' '(' Integer ')' .               (rule 18)

	'('            reduce using rule 18
	')'            reduce using rule 18
	';'            reduce using rule 18
	'Bound'        reduce using rule 18
	'fn'           reduce using rule 18
	'in'           reduce using rule 18
	'let'          reduce using rule 18
	L_Ident        reduce using rule 18
	%eof           reduce using rule 18


State 36

	Term -> 'let' '=' Term 'in' ScopedTerm .            (rule 11)

	'('            reduce using rule 11
	')'            reduce using rule 11
	';'            reduce using rule 11
	'Bound'        reduce using rule 11
	'fn'           reduce using rule 11
	'in'           reduce using rule 11
	'let'          reduce using rule 11
	L_Ident        reduce using rule 11
	%eof           reduce using rule 11


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 19
Number of terminals: 11
Number of non-terminals: 12
Number of states: 37
